# Demo-App

./: .env  docker-compose.yml  docker.env  pyproject.toml
__init__.py/: pyproject.toml
__init__.py/tests/: test__init__py.py
app/: main.py  models.py  schemas.py
app/db/: session.py
