[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6.2"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
uvicorn = "^0.15.0"
alembic = "^1.7.1"
inflect = "^5.3.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
